--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <img style="width:100%;" src="images/bg.jpg"/>
-  <div class="border"></div>
+  <button class="border">ITXY</button>
   <img style='display:none; width:100%;' src="images/itxy.jpg"/>
 
   <script type="text/javascript">
